--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^20.11.17",
+        "@types/uuid": "^9.0.8",
         "@types/ws": "^8.5.10",
         "@typescript-eslint/eslint-plugin": "^7.0.1",
         "@typescript-eslint/parser": "^7.0.1",
@@ -26,6 +27,7 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "uuid": "^9.0.1",
         "ws": "^8.8.0"
     }
 }
