--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Template for the WebSocket remote control task",
     "main": "index.js",
     "scripts": {
-        "start": "node ./index.ts",
+        "start": "ts-node ./index.ts",
         "start:dev": "nodemon ./index.ts",
         "format": "prettier --write \"src/**/*.ts\"",
         "lint:fix": "eslint \"src/**/*.ts\" --fix",
